src/containers/User/Detail/InfoSection.module.css
.label {
  color: var(--color-gray-blueish);
  min-width: 150px;
}

.darkLabel {
  color: var(--dropdown-item-hover-color);
}

.sectionWrapper {
  display: flex;
  justify-content: flex-start;
  flex-direction: row;
  align-items: flex-start;
  flex-wrap: wrap;
}

.info {
  width: 75%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.noInfo {
  color: var(--var-text-color-light);
  opacity: 50%;
}

.infoError {
  color: var(--color-orange);
}

/* SMALL */
@media screen and (max-width: 768px) {
  .label,
  .info {
    width: 100%;
  }
  .info {
    margin-top: 0.5rem;
  }
}

